--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/auto_pricer
+spring.datasource.username=root
+spring.datasource.password=Snitchdorada2021
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8080
+spring.main.allow-bean-definition-overriding=true
